--- a/Paper-WolfLinkRPC/src/main/resources/config.yml
+++ b/Paper-WolfLinkRPC/src/main/resources/config.yml
@@ -1,8 +1,7 @@
-Host: "43.248.79.66"
-Port: 55559
-UserName: "testuser"
-Password: "Abc233"
-QueueName: "paper_1"
+Host: "127.0.0.1"
+Port: 10000
+UserName: "username"
+Password: "password"
 Debug: false
 PermissionList: []
 # 实际队列名为 bukkit_paper_default
