增加了生日检查和QQ绑定检查

--- a/Bukkit-WolfLinkRPC/pom.xml
+++ b/Bukkit-WolfLinkRPC/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.wolflink.paper</groupId>
-    <artifactId>Paper-WolfLinkRPC</artifactId>
+    <groupId>org.wolflink.bukkit</groupId>
+    <artifactId>Bukkit-WolfLinkRPC</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>Paper_WolfLinkRPC</name>
+    <name>Bukkit_WolfLinkRPC_Plus</name>
 
     <properties>
         <java.version>1.8</java.version>
@@ -95,8 +95,8 @@
 
     <repositories>
         <repository>
-            <id>papermc-repo</id>
-            <url>https://repo.papermc.io/repository/maven-public/</url>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
         <repository>
             <id>sonatype</id>
@@ -106,8 +106,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.destroystokyo.paper</groupId>
-            <artifactId>paper-api</artifactId>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
             <version>1.16.5-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
